<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epic New App</string>
    <string name="appLabel">Click the buttons and watch as &quot;primary color&quot; epicness happens!</string>
    <string name="fancyShmancyBlueText">Fancy Shmancy Blue</string>
    <string name="bloodRedText">Blood Red</string>
    <string name="mellowYellowText">Mellow Yellow</string>
    <string name="wickedGreenText">Wicked Green</string>
    <string name="nothingRhymesWithThisOrangeText">Nothing Rhymes With This Orange</string>
    <string name="poppingPurpleText">Popping Purple</string>
    <string name="screenChangingButtonText">Click here to go to Screen 2!</string>
    <string name="title_activity_second_epic">SecondEpicActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="secondEpicButtonText">Click here to go back to screen 1!</string>
    <string name="screenTwoIntroTextText">Click the buttons to get &quot;secondary color&quot; epicness!</string>
    <string name="title_activity_third_epic">ThirdEpicActivity</string>

</resources>
