<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/screenTwoIntroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/appLabel" />

    <Button
        android:id="@+id/fancyShmancyBlueButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstScreenButton"
        android:layout_below="@+id/screenTwoIntroText"
        android:layout_marginTop="39dp"
        android:text="@string/fancyShmancyBlueText"
        android:textColor="@id/fancyShmancyBlueButton" />

    <Button
        android:id="@+id/mellowYellowButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bloodRedButton"
        android:layout_alignBottom="@+id/bloodRedButton"
        android:layout_alignRight="@+id/screenTwoIntroText"
        android:layout_marginRight="19dp"
        android:text="@string/mellowYellowText" />

    <Button
        android:id="@+id/bloodRedButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/screenTwoIntroText"
        android:layout_below="@+id/fancyShmancyBlueButton"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="46dp"
        android:text="@string/bloodRedText" />

    <Button
        android:id="@+id/firstScreenButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mellowYellowButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/screenChangingButtonText" />

</RelativeLayout>